--- a/main.html
+++ b/main.html
@@ -8,7 +8,41 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+   <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Student Roll Numbers and Names</title>
+</head>
+<body>
+  <table>
+    <thead>
+      <tr>
+        <th>Roll number</th>
+        <th>Name</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>001</td>
+        <td>John Doe</td>
+      </tr>
+      <tr>
+        <td>002</td>
+        <td>Jane Smith</td>
+      </tr>
+      <tr>
+        <td>003</td>
+        <td>Michael Johnson</td>
+      </tr>
+      <!-- Add more rows as needed -->
+    </tbody>
+  </table>
+</body>
+</html>
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
